@@ -7,6 +7,11 @@ CHANGES
 0.5.0rc2
 ========
 - orm
+    - Fixed bug involving read/write relation()s that 
+      contain literal or other non-column expressions 
+      within their primaryjoin condition equated
+      to a foreign key column.
+      
     - "non-batch" mode in mapper(), a feature which allows
       mapper extension methods to be called as each instance
       is updated/inserted, now honors the insert order
